--- a/AspNetCore-Identity/appsettings.json
+++ b/AspNetCore-Identity/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AspNetCore-Identity;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
